--- a/netty_history/netty/pom.xml
+++ b/netty_history/netty/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>netty</artifactId>
+        <artifactId>netty_history</artifactId>
         <groupId>com.zws</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>netty_reactor</artifactId>
+    <artifactId>netty</artifactId>
 
     <dependencies>
         <dependency>
