--- a/netty_history/pom.xml
+++ b/netty_history/pom.xml
@@ -8,12 +8,13 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>netty</artifactId>
+    <artifactId>netty_history</artifactId>
     <packaging>pom</packaging>
+
     <modules>
         <module>nio</module>
         <module>aio</module>
+        <module>netty</module>
     </modules>
 
 
