--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,13 @@
     <modules>
         <module>netty_history</module>
         <module>designpatterns</module>
+
     </modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+    </properties>
 
 
 
@@ -22,9 +28,9 @@
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
-                     <source>1.8</source>
-                     <target>1.8</target>
-                     <encoding>UTF-8</encoding>
+                     <source>${java.version}</source>
+                     <target>${java.version}</target>
+                     <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
 
