--- a/security/security-app/pom.xml
+++ b/security/security-app/pom.xml
@@ -3,19 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>netty_history</artifactId>
-        <groupId>com.zws.framework</groupId>
+        <artifactId>security</artifactId>
+        <groupId>com.zws.security</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>netty</artifactId>
+    <groupId>com.zws.security</groupId>
+    <artifactId>security-app</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>io.netty</groupId>
-            <artifactId>netty-all</artifactId>
-            <version>4.1.6.Final</version>
+            <groupId>com.zws.security</groupId>
+            <artifactId>security-core</artifactId>
+            <version>${security.version}</version>
         </dependency>
     </dependencies>
+
 </project>
