--- a/security/security-demo/pom.xml
+++ b/security/security-demo/pom.xml
@@ -12,6 +12,11 @@
     <groupId>com.zws.security</groupId>
     <artifactId>security-demo</artifactId>
 
+    <properties>
+        <swagger.version>2.7.0</swagger.version>
+        <boot.maven.plugin.version>1.3.3.RELEASE</boot.maven.plugin.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.zws.security</groupId>
@@ -31,19 +36,21 @@
             <artifactId>commons-io</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.github.tomakehurst</groupId>
+            <artifactId>wiremock</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <version>2.7.0</version>
+            <version>${swagger.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
-            <version>2.7.0</version>
+            <version>${swagger.version}</version>
         </dependency>
-        <dependency>
-            <groupId>com.github.tomakehurst</groupId>
-            <artifactId>wiremock</artifactId>
-        </dependency>
+
     </dependencies>
 
 
@@ -53,7 +60,7 @@
             <plugin>
                  <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>1.3.3.RELEASE</version>
+                <version>${boot.maven.plugin.version}</version>
                 <executions>
                       <execution>
                            <goals>
