--- a/security/security-demo/pom.xml
+++ b/security/security-demo/pom.xml
@@ -15,6 +15,7 @@
     <properties>
         <swagger.version>2.7.0</swagger.version>
         <boot.maven.plugin.version>1.3.3.RELEASE</boot.maven.plugin.version>
+        <mybatis.version>1.3.1</mybatis.version>
     </properties>
 
     <dependencies>
@@ -38,6 +39,11 @@
         <dependency>
             <groupId>com.github.tomakehurst</groupId>
             <artifactId>wiremock</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${mybatis.version}</version>
         </dependency>
 
         <dependency>
