--- a/security/security-demo/src/main/resources/application.yml
+++ b/security/security-demo/src/main/resources/application.yml
@@ -29,11 +29,11 @@ authentication:
          app-id: 101512320
          app-secret: 8d4b687241ffd8ce89593661be207177
          provider-id: qq
-#security:
- # oauth2:
-  #  client:
-   #   id: 3838438
-    #  client-secret: zws
+security:
+  oauth2:
+    client:
+      client-id: zws
+      client-secret: zws
 
 
 
