--- a/security/security-demo/src/main/resources/application.yml
+++ b/security/security-demo/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
     password: passW0rd
     url: jdbc:mysql://192.168.1.151/crowd_sourcing?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
-  session:
-    store-type: none
+  #session:
+   # store-type: none
   redis:
     host: 192.168.1.154
     port: 6379
@@ -30,8 +30,8 @@ authentication:
          app-id: 101512320
          app-secret: 8d4b687241ffd8ce89593661be207177
          provider-id: qq
-   # app:
-    #   tokenStore: redis
+    app:
+       tokenStore: redis
 
 
 
