--- a/security/security-demo/src/main/resources/application.yml
+++ b/security/security-demo/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
   #session:
    # store-type: none
   redis:
-    host: 192.168.1.154
+    host: localhost
     port: 6379
 authentication:
   core:
