--- a/sso-demo/pom.xml
+++ b/sso-demo/pom.xml
@@ -16,6 +16,8 @@
         <module>sso-server</module>
         <module>sso-client1</module>
         <module>sso-client2</module>
+        <module>app-client1</module>
+        <module>resource-demo</module>
     </modules>
 
     <properties>
