--- a/sso-demo/resource-demo/pom.xml
+++ b/sso-demo/resource-demo/pom.xml
@@ -10,12 +10,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.zws.sso</groupId>
-    <artifactId>sso-server</artifactId>
+    <artifactId>resource-demo</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -26,15 +30,8 @@
             <artifactId>spring-security-oauth2</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-jwt</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>org.springframework.social</groupId>
+            <artifactId>spring-social-security</artifactId>
         </dependency>
     </dependencies>
-
-
-
 </project>
