--- a/security/security-demo/pom.xml
+++ b/security/security-demo/pom.xml
@@ -22,7 +22,7 @@
     <dependencies>
         <dependency>
             <groupId>com.zws.security</groupId>
-            <artifactId>security-app</artifactId>
+            <artifactId>security-browser</artifactId>
             <version>${security.version}</version>
         </dependency>
         <dependency>
