--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
-        <module>netty_history</module>
+        <module>netty-history</module>
         <module>design-patterns</module>
         <module>security</module>
         <module>sso-demo</module>
