--- a/security/security-demo/src/main/resources/application.yml
+++ b/security/security-demo/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
     password: passW0rd
     url: jdbc:mysql://192.168.1.151/crowd_sourcing?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
-  session:
-    store-type: none
+  #session:
+   # store-type: none
   redis:
     host: localhost
     port: 6379
