app: token 共享  并发登录 实现中

--- a/security/security-demo/src/main/resources/application.yml
+++ b/security/security-demo/src/main/resources/application.yml
@@ -31,7 +31,7 @@ authentication:
          app-secret: 8d4b687241ffd8ce89593661be207177
          provider-id: qq
     app:
-       tokenStore: redis
+       tokenStore: concurrentRedis
 
 
 
