--- a/security/pom.xml
+++ b/security/pom.xml
@@ -19,6 +19,9 @@
         <module>security-browser</module>
         <module>security-app</module>
         <module>security-demo</module>
+        <module>security-client</module>
+        <module>security-authorize</module>
+        <module>security-client-demo</module>
     </modules>
 
     <properties>
