--- a/security/security-demo/src/main/resources/application.yml
+++ b/security/security-demo/src/main/resources/application.yml
@@ -8,8 +8,8 @@ spring:
     password: root
     url: jdbc:mysql://118.24.109.67/zwsdb?useUnicode=true&characterEncoding=UTF-8&useSSL=false
     driver-class-name: com.mysql.jdbc.Driver
-  #session:
-   # store-type: none
+  session:
+    store-type: redis
   redis:
     host: localhost
     port: 6379
@@ -32,7 +32,7 @@ authentication:
          provider-id: qq
     app:
        token:
-          store: redis
+          store-type: redis
           maximum-tokens: 1
 
 
