--- a/security/security-client-demo/pom.xml
+++ b/security/security-client-demo/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>security-client</artifactId>
             <version>${security.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
