--- a/security/security-demo/src/main/resources/application.yml
+++ b/security/security-demo/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8010
   session:
     timeout: 600
 spring:
@@ -20,6 +20,7 @@ authentication:
     permitUrl:
            - /user/binding
            - /user/appBinding
+           - /login.html
     social:
        filterProcessesUrl: /qqLogin
        wx:
