--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>sso-demo</module>
         <module>concurrent</module>
         <module>jvm</module>
+        <module>cloud</module>
     </modules>
 
     <properties>
