--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -13,4 +13,30 @@
     <artifactId>cloud</artifactId>
 
 
+    <dependencyManagement>
+
+        <!-- Mainly used to resolve maven conflicts
+             Specific details @see https://platform.spring.io/platform/
+         -->
+        <dependencies>
+            <dependency>
+                <groupId>io.spring.platform</groupId>
+                <artifactId>platform-bom</artifactId>
+                <version>Brussels-SR13</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Dalston.SR5</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+
+
+    </dependencyManagement>
+
 </project>
