--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -12,25 +12,26 @@
     <groupId>com.zws.cloud</groupId>
     <artifactId>cloud</artifactId>
     <packaging>pom</packaging>
+    <version>1.0.0-SNAPSHOT</version>
+
     <modules>
-        <module>eureka-server</module>
         <module>eureka-server</module>
         <module>order</module>
         <module>product</module>
         <module>config-server</module>
     </modules>
 
+    <properties>
+        <boot.maven.plugin.version>1.3.3.RELEASE</boot.maven.plugin.version>
+    </properties>
+
 
     <dependencyManagement>
-
-        <!-- Mainly used to resolve maven conflicts
-             Specific details @see https://platform.spring.io/platform/
-         -->
         <dependencies>
             <dependency>
                 <groupId>io.spring.platform</groupId>
                 <artifactId>platform-bom</artifactId>
-                <version>Brussels-SR13</version>
+                <version>Cairo-SR5</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -38,13 +39,16 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Dalston.SR5</version>
+                <version>Finchley.SR2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
 
 
+
     </dependencyManagement>
+
+
 
 </project>
