eureka客户端搭建存在问题 日志错误（Unregistering application ORDER with eureka with status DOWN） 解决方法 加入web组件即可解决，没有找出原因

--- a/cloud/order/order-client/pom.xml
+++ b/cloud/order/order-client/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zws.client</groupId>
+    <groupId>com.zws.cloud</groupId>
     <artifactId>order-client</artifactId>
 
 
