--- a/cloud/eureka-server/src/main/resources/application.yml
+++ b/cloud/eureka-server/src/main/resources/application.yml
@@ -3,3 +3,10 @@ spring:
     name: eureka
 server:
   port: 8761
+eureka:
+  client:
+    service-url:
+       defaultZone: http://localhost:8761/eureka/  # 多个以逗号隔开，eureka即是服务端，也是客户端
+    register-with-eureka: false   #表示如果注册的服务是eurake，就不显示在访问页面上
+  server:
+    enable-self-preservation: false  # 测试环境设置为false 正式环境必须设置为ture  自我保护模式，当出现出现网络分区、eureka在短时间内丢失过多客户端时，会进入自我保护模式，即一个服务长时间没有发送心跳，eureka也不会将其删除，默认为true
