--- a/cloud/order/order-common/pom.xml
+++ b/cloud/order/order-common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zws.common</groupId>
+    <groupId>com.zws.cloud</groupId>
     <artifactId>order-common</artifactId>
 
 
