--- a/springboot/features/pom.xml
+++ b/springboot/features/pom.xml
@@ -3,28 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>product</artifactId>
-        <groupId>com.zws.cloud</groupId>
+        <artifactId>springboot</artifactId>
+        <groupId>com.zws.springboot</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.zws.cloud</groupId>
-    <artifactId>product-server</artifactId>
+    <groupId>com.zws.springboot</groupId>
+    <artifactId>features</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.zws.cloud</groupId>
-            <artifactId>product-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-       <!-- <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka-client</artifactId>
-        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -34,5 +22,6 @@
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
     </dependencies>
+
 
 </project>
