--- a/cloud/order/order-server/pom.xml
+++ b/cloud/order/order-server/pom.xml
@@ -45,14 +45,15 @@
             <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>com.zws.cloud</groupId>
             <artifactId>cloud-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zws.cloud</groupId>
+            <artifactId>product-client</artifactId>
         </dependency>
 
 
