--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -24,8 +24,9 @@
 
     <properties>
         <boot.maven.plugin.version>1.3.3.RELEASE</boot.maven.plugin.version>
-        <cloud-common-version>1.0.0-SNAPSHOT</cloud-common-version>
+        <cloud.common.version>1.0.0-SNAPSHOT</cloud.common.version>
         <swagger.version>2.1.2-RELEASE</swagger.version>
+        <product.client.version>1.0.0-SNAPSHOT</product.client.version>
     </properties>
 
 
@@ -80,7 +81,12 @@
                 <dependency>
                     <groupId>com.zws.cloud</groupId>
                     <artifactId>cloud-common</artifactId>
-                    <version>${cloud-common-version}</version>
+                    <version>${cloud.common.version}</version>
+                </dependency>
+                <dependency>
+                    <groupId>com.zws.cloud</groupId>
+                    <artifactId>product-client</artifactId>
+                    <version>${product.client.version}</version>
                 </dependency>
         </dependencies>
     </dependencyManagement>
