--- a/cloud/config-server/src/main/resources/bootstrap.yml
+++ b/cloud/config-server/src/main/resources/bootstrap.yml
@@ -20,7 +20,7 @@ encrypt:
     # 原因：因为RsaProperties在EncryptionBootstrapConfiguration这个配置初始化的，所以它是放在bootstratp Context中的，不是放在spring Applicaiton context
     # 如果放在application.yml会找不到RsaProperties
     #keytool -genkeypair -alias zws -keyalg RSA -dname "CN=Web Server,OU=Unit,O=Organization,L=City,S=State,C=US" -keypass zwssecret -keystore server.jks -storepass zws123456
-    location: classpath：/server.jks
+    location: classpath:/server.jks
     password: zws123456
     alias: zws
     secret: zwssecret
