--- a/cloud/config-server/src/main/resources/bootstrap.yml
+++ b/cloud/config-server/src/main/resources/bootstrap.yml
@@ -9,11 +9,11 @@ spring:
           username: 2848392861@qq.com
           basedir: /Users/zws/config/basedir
           password: 2848392861zws
+  profiles:
+    active: @spring.profiles.active@
 eureka:
-  client:
-    service-url:
-       # 多个以逗号隔开，eureka即是服务端，也是客户端
-       defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
+  instance:
+    prefer-ip-address: true
 encrypt:
   key-store:
     # 注：如果配置了这个东西必须配置在bootstrap.yml中，不然EncryptionAutoConfiguration 会加载不到RsaProperties 导致报错
