--- a/cloud/order/order-server/pom.xml
+++ b/cloud/order/order-server/pom.xml
@@ -57,6 +57,7 @@
         </dependency>
 
 
+
     </dependencies>
 
     <build>
@@ -74,7 +75,39 @@
                 </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>**/*.yml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
     </build>
+
+    <profiles>
+        <profile>
+            <!--执行打包命令时将使用此处的id进行定位-->
+            <id>dev</id>
+            <activation>
+                <!--此处将dev设置为默认环境-->
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <spring.profiles.active>dev</spring.profiles.active>
+            </properties>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <spring.profiles.active>test</spring.profiles.active>
+            </properties>
+        </profile>
+    </profiles>
 
 
 </project>
