--- a/cloud/product/product-client/pom.xml
+++ b/cloud/product/product-client/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>com.zws.cloud</groupId>
     <artifactId>product-client</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
