--- a/cloud/product/product-server/src/main/resources/bootstrap.yml
+++ b/cloud/product/product-server/src/main/resources/bootstrap.yml
@@ -6,10 +6,10 @@ spring:
       discovery:
         service-id: config
         enabled: true
-      profile: dev
+      profile: @spring.profiles.active@
     encoding: UTF-8
+  profiles:
+      active: @spring.profiles.active@
 eureka:
-  client:
-    service-url:
-       # 多个以逗号隔开，eureka即是服务端，也是客户端
-       defaultZone: http://localhost:8761/eureka/,http://localhost:8762/eureka/,http://localhost:8763/eureka/
+  instance:
+    prefer-ip-address: true
