--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -11,10 +11,7 @@
 
     <groupId>com.zws.springboot</groupId>
     <artifactId>springboot</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>features</module>
-    </modules>
+
 
     <dependencyManagement>
         <dependencies>
@@ -27,6 +24,18 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+    </dependencies>
 
 
 
