--- a/cloud/product/product-server/pom.xml
+++ b/cloud/product/product-server/pom.xml
@@ -39,10 +39,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
@@ -50,8 +46,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.zws.cloud</groupId>
+            <artifactId>cloud-common</artifactId>
+        </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
@@ -81,6 +80,7 @@
             </resource>
         </resources>
     </build>
+
 
 
     <profiles>
