--- a/cloud/config-server/src/main/resources/bootstrap.yml
+++ b/cloud/config-server/src/main/resources/bootstrap.yml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/zengwensheng/config
+          uri: https://github.com/zengwensheng/config-repository
           username: 2848392861@qq.com
           basedir: /Users/zws/config/basedir
           password: 2848392861zws
