--- a/springboot/pom.xml
+++ b/springboot/pom.xml
@@ -52,6 +52,12 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>1.0.0-RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 
