--- a/cloud/order/order-server/pom.xml
+++ b/cloud/order/order-server/pom.xml
@@ -49,8 +49,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.zws.cloud</groupId>
             <artifactId>cloud-common</artifactId>
@@ -59,6 +61,11 @@
         <dependency>
             <groupId>com.zws.cloud</groupId>
             <artifactId>product-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
 
