--- a/docker/jenkins/Dockerfile
+++ b/docker/jenkins/Dockerfile
@@ -1,17 +1,14 @@
-FROM jenkins/jenkins:2.92
+FROM bitnami/jenkins:2
 
 MAINTAINER zws  "2848392861@qq.com"
 
 COPY ["./maven","maven"]
 
-ENV JAVA_HOME /usr/lib/jvm/java-1.8.0-openjdk-amd64
+ENV JAVA_HOME /opt/bitnami/java
 
 ENV  MAVEN_HOME  /maven
 
 ENV PATH  $PATH:$MAVEN_HOME/bin
-
-
-
 
 
 
