--- a/docker/jenkins/Dockerfile
+++ b/docker/jenkins/Dockerfile
@@ -1,14 +1,11 @@
-FROM bitnami/jenkins:2
+FROM jenkins/jenkins:2.92
 
 MAINTAINER zws  "2848392861@qq.com"
 
 COPY ["./maven","maven"]
 
-ENV JAVA_HOME /opt/bitnami/java
+ENV JAVA_HOME /usr/lib/jvm/java-1.8.0-openjdk-amd64
 
 ENV  MAVEN_HOME  /maven
 
 ENV PATH  $PATH:$MAVEN_HOME/bin
-
-
-
